// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action-text prop 1`] = `
<div class="ghb-search ghb-search--show-action">
  <div class="ghb-search__content ghb-search__content--square">
    <div class="ghb-cell ghb-cell--borderless ghb-field">
      <div class="ghb-field__left-icon"><i class="ghb-icon ghb-icon-search">
          <!----></i></div>
      <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
        <div class="ghb-field__body"><input type="search" class="ghb-field__control"></div>
      </div>
    </div>
  </div>
  <div role="button" tabindex="0" class="ghb-search__action">Custom Text</div>
</div>
`;

exports[`label slot 1`] = `
<div class="ghb-search">
  <div class="ghb-search__content ghb-search__content--square">
    <div class="ghb-search__label">Custom Label</div>
    <div class="ghb-cell ghb-cell--borderless ghb-field">
      <div class="ghb-field__left-icon"><i class="ghb-icon ghb-icon-search">
          <!----></i></div>
      <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
        <div class="ghb-field__body"><input type="search" class="ghb-field__control"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`left slot 1`] = `
<div class="ghb-search">Custom Left Content<div class="ghb-search__content ghb-search__content--square">
    <div class="ghb-cell ghb-cell--borderless ghb-field">
      <div class="ghb-field__left-icon"><i class="ghb-icon ghb-icon-search">
          <!----></i></div>
      <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
        <div class="ghb-field__body"><input type="search" class="ghb-field__control"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`left-icon prop 1`] = `
<div class="ghb-search">
  <div class="ghb-search__content ghb-search__content--square">
    <div class="ghb-cell ghb-cell--borderless ghb-field">
      <div class="ghb-field__left-icon"><i class="ghb-icon ghb-icon-setting-o">
          <!----></i></div>
      <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
        <div class="ghb-field__body"><input type="search" class="ghb-field__control"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`right-icon prop 1`] = `
<div class="ghb-search">
  <div class="ghb-search__content ghb-search__content--square">
    <div class="ghb-cell ghb-cell--borderless ghb-field">
      <div class="ghb-field__left-icon"><i class="ghb-icon ghb-icon-search">
          <!----></i></div>
      <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
        <div class="ghb-field__body"><input type="search" class="ghb-field__control">
          <div class="ghb-field__right-icon"><i class="ghb-icon ghb-icon-setting-o">
              <!----></i></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`right-icon slot 1`] = `
<div class="ghb-search">
  <div class="ghb-search__content ghb-search__content--square">
    <div class="ghb-cell ghb-cell--borderless ghb-field">
      <div class="ghb-field__left-icon"><i class="ghb-icon ghb-icon-search">
          <!----></i></div>
      <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
        <div class="ghb-field__body"><input type="search" class="ghb-field__control">
          <div class="ghb-field__right-icon">Custom Right Icon</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
